Fixed buttons not being on screen on mobile

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -26,7 +26,7 @@ input[type="text"] {
 }
 
 .main-content {
-  margin: 25% auto 0 auto;
+  margin: 15% auto 0 auto;
   max-width: 500px;
 }
 
